--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 			</div>
 			<div class="hide" id="glyphs" style="display: none;">
 				<div>
-					<label class="label" for="portalglyphs_input">Portalglyphs:</label>
+					<label class="label" for="portalglyphs_input">Portalglyphs/Galactic Coordinates/Region Name:</label>
 				</div>
 
 				<div>
-					<input style="width:min(400px, 60%)" class="input" type="text" id="portalglyphs_input"
-						oninput="glyphInputOnChange(this); showGlyphs()"><button class="button is-small is-danger"
+					<input style="width:min(400px, 60%)" class="input" type="text" id="portalglyphs_input">
+					<button class="button is-small is-danger"
 						id="delButton" type="button" onclick="deleteCharacter('portalglyphs_input')">&larr;
 						Delete</button>
 				</div>
