--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<a href="..">&larr; View other pages</a>
 		</nav>
 		<h1 class="title">Am I in Hub Space?</h1>
-		<form>
+		<div id="form">
 			<div>
 				<label>Select your current galaxy:</label>
 				<select class="dropdown" name="galaxy" id="galaxy_input" onchange="hideGlyphs(this, 'hide')">
@@ -45,8 +45,8 @@
 
 				<div>
 					<input style="width:min(400px, 60%)" class="input" type="text" id="portalglyphs_input">
-					<button class="button is-small is-danger"
-						id="delButton" type="button" onclick="deleteCharacter('portalglyphs_input')">&larr;
+					<button class="button is-small is-danger" id="delButton" type="button"
+						onclick="deleteCharacter('portalglyphs_input')">&larr;
 						Delete</button>
 				</div>
 				<div class="portal-buttons">
@@ -103,7 +103,7 @@
 						name="portalglyphs"></output></div>
 
 			</div>
-		</form>
+		</div>
 		<div class="actions hide" style="display: none;">
 			<input class="button is-primary" type="submit" value="Check"
 				onclick="submitGlyphs('galaxy_input', 'portalglyphs_input', 'hubBool', 'error')">
