Change link change target

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				'amIthereyet.nmsgalactichub.com',
 				'amiinhubspace.nmsgalactichub.com'
 			]
-			if (GHubHosts.includes(window.location.host)) document.querySelector('a[href=".."]').href = 'https://nmsgalactichub.com';
+			if (GHubHosts.includes(window.location.host)) document.querySelector('a[href=".."]').href = 'https://lenni009.github.io/';	// 'https://nmsgalactichub.com';
 		}
 	</script>
 </head>
