--- a/index.html
+++ b/index.html
@@ -5,120 +5,52 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Am I in Hub Space?</title>
-	<link rel="stylesheet" href="./styles.css">
-	<script src="./logic.js"></script>
-	<script>
-		function showGlyphs() {
-			document.getElementById("glyph_display").innerText = document.getElementById("portalglyphs_input").value;
-		}
-		window.onload = () => {
-			hideGlyphs(document.getElementById('galaxy_input'), 'hide');
-
-			const GHubHosts = [
-				'amihereyet.nmsgalactichub.com',
-				'amIhereyet.nmsgalactichub.com',
-				'amithereyet.nmsgalactichub.com',
-				'amIthereyet.nmsgalactichub.com',
-				'amiinhubspace.nmsgalactichub.com'
-			]
-			if (GHubHosts.includes(window.location.host)) document.querySelector('a[href=".."]').href = 'https://lenni009.github.io/';	// 'https://nmsgalactichub.com';
-		}
-	</script>
+	<script src="./src/main.ts" type="module"></script>
 </head>
 
 <body>
-	<div class="container" style="width: min(500px, 90%);">
-		<nav style="display: flex; justify-content:space-between">
-			<a href="..">&larr; View other pages</a>
-		</nav>
-		<h1 class="title">Am I in Hub Space?</h1>
-		<div id="form">
+	<div class="container">
+		<header>
+			<nav>
+				<ul>
+					<li><a href="..">&larr; View other pages</a></li>
+				</ul>
+				<ul>
+					<li><button role="button" class="themeswitcher" id="themeSwitch">Switch Theme</button></li>
+				</ul>
+			</nav>
+			<h1 class="title">Am I in Hub Space?</h1>
+
+			<label>Select your current galaxy:</label>
+			<select id="galaxyInput">
+				<option value=""></option>
+				<option value="Euclid">Euclid</option>
+				<option value="Hilbert">Hilbert</option>
+				<option value="Calypso">Calypso</option>
+				<option value="Budullangr">Budullangr</option>
+				<option value="Eissentam">Eissentam</option>
+			</select>
+		</header>
+
+		<main>
 			<div>
-				<label>Select your current galaxy:</label>
-				<select class="dropdown" name="galaxy" id="galaxy_input" onchange="hideGlyphs(this, 'hide')">
-					<option value=""></option>
-					<option value="Euclid">Euclid</option>
-					<option value="Hilbert">Hilbert</option>
-					<option value="Calypso">Calypso</option>
-					<option value="Budullangr">Budullangr</option>
-					<option value="Eissentam">Eissentam</option>
-				</select>
+				<label class="label" for="portalglyphsInput">Portalglyphs / Galactic Coordinates / Region Name:</label>
+				<input class="input" type="text" id="portalglyphsInput">
+				<button role="button" class="is-danger" id="delButton" type="button">&larr; Delete</button>
+				<div class="portal-buttons grid"></div>
+				<p>
+					<output class="glyphs" id="glyphDisplay"></output>
+				</p>
 			</div>
-			<div class="hide" id="glyphs" style="display: none;">
-				<div>
-					<label class="label" for="portalglyphs_input">Portalglyphs/Galactic Coordinates/Region Name:</label>
-				</div>
 
-				<div>
-					<input style="width:min(400px, 60%)" class="input" type="text" id="portalglyphs_input">
-					<button class="button is-small is-danger" id="delButton" type="button"
-						onclick="deleteCharacter('portalglyphs_input')">&larr;
-						Delete</button>
-				</div>
-				<div class="portal-buttons">
-					<button class="button" type="button" value="0" onclick="glyphOnClick(this, 'portalglyphs_input')">
-						<span class="glyphs icon is-small">0</span>
-					</button>
-					<button class="button" type="button" value="1" onclick="glyphOnClick(this, 'portalglyphs_input')">
-						<span class="glyphs icon is-small">1</span>
-					</button>
-					<button class="button" type="button" value="2" onclick="glyphOnClick(this, 'portalglyphs_input')">
-						<span class="glyphs icon is-small">2</span>
-					</button>
-					<button class="button" type="button" value="3" onclick="glyphOnClick(this, 'portalglyphs_input')">
-						<span class="glyphs icon is-small">3</span>
-					</button>
-					<button class="button" type="button" value="4" onclick="glyphOnClick(this, 'portalglyphs_input')">
-						<span class="glyphs icon is-small">4</span>
-					</button>
-					<button class="button" type="button" value="5" onclick="glyphOnClick(this, 'portalglyphs_input')">
-						<span class="glyphs icon is-small">5</span>
-					</button>
-					<button class="button" type="button" value="6" onclick="glyphOnClick(this, 'portalglyphs_input')">
-						<span class="glyphs icon is-small">6</span>
-					</button>
-					<button class="button" type="button" value="7" onclick="glyphOnClick(this, 'portalglyphs_input')">
-						<span class="glyphs icon is-small">7</span>
-					</button>
-					<button class="button" type="button" value="8" onclick="glyphOnClick(this, 'portalglyphs_input')">
-						<span class="glyphs icon is-small">8</span>
-					</button>
-					<button class="button" type="button" value="9" onclick="glyphOnClick(this, 'portalglyphs_input')">
-						<span class="glyphs icon is-small">9</span>
-					</button>
-					<button class="button" type="button" value="A" onclick="glyphOnClick(this, 'portalglyphs_input')">
-						<span class="glyphs icon is-small">A</span>
-					</button>
-					<button class="button" type="button" value="B" onclick="glyphOnClick(this, 'portalglyphs_input')">
-						<span class="glyphs icon is-small">B</span>
-					</button>
-					<button class="button" type="button" value="C" onclick="glyphOnClick(this, 'portalglyphs_input')">
-						<span class="glyphs icon is-small">C</span>
-					</button>
-					<button class="button" type="button" value="D" onclick="glyphOnClick(this, 'portalglyphs_input')">
-						<span class="glyphs icon is-small">D</span>
-					</button>
-					<button class="button" type="button" value="E" onclick="glyphOnClick(this, 'portalglyphs_input')">
-						<span class="glyphs icon is-small">E</span>
-					</button>
-					<button class="button" type="button" value="F" onclick="glyphOnClick(this, 'portalglyphs_input')">
-						<span class="glyphs icon is-small">F</span>
-					</button>
-				</div>
-				<div><output class="glyphs" style="word-break: break-word" id="glyph_display"
-						name="portalglyphs"></output></div>
-
+			<div class="actions">
+				<input role="button" type="submit" value="Check" id="submitBtn">
+				<input role=" button" type="reset" value="Reset Glyphs" id="resetBtn">
 			</div>
-		</div>
-		<div class="actions hide" style="display: none;">
-			<input class="button is-primary" type="submit" value="Check"
-				onclick="submitGlyphs('galaxy_input', 'portalglyphs_input', 'hubBool', 'error')">
-			<input class="button is-warning" type="reset" value="Reset Glyphs"
-				onclick="clearValues(['portalglyphs_input', 'glyph_display', 'output'])">
-		</div>
-		<p>
-			<output id="output"></output>
-		</p>
+			<p class=" output">
+				<output id="output"></output>
+			</p>
+		</main>
 	</div>
 </body>
 
