--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Am I in Hub Space?</title>
+	<title>Am I in Eisvana Space?</title>
 	<script src="./src/main.ts" type="module"></script>
 </head>
 
@@ -19,7 +19,7 @@
 					<li><button role="button" class="themeswitcher" id="themeSwitch">Switch Theme</button></li>
 				</ul>
 			</nav>
-			<h1 class="title">Am I in Hub Space?</h1>
+			<h1 class="title">Am I in Eisvana Space?</h1>
 
 			<label>Select your current galaxy:</label>
 			<select id="galaxyInput">
