--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 			<div class="actions">
 				<input role="button" type="submit" value="Check" id="submitBtn">
-				<input role=" button" type="reset" value="Reset Glyphs" id="resetBtn">
+				<input role=" button" type="reset" value="Reset Input" id="resetBtn">
 			</div>
 			<p class=" output">
 				<output id="output"></output>
