--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Am I in Eisvana?</title>
+	<title>¿Estoy en la Royal Space Society?</title>
 	<script src="./src/main.ts" type="module"></script>
 </head>
 
@@ -13,20 +13,20 @@
 		<header>
 			<nav>
 				<ul>
-					<li><a href="..">&larr; View other pages</a></li>
+					<li><a href="..">&larr; Ver otras páginas</a></li>
 				</ul>
 				<ul>
-					<li><button role="button" class="themeswitcher" id="themeSwitch">Switch Theme</button></li>
+					<li><button role="button" class="themeswitcher" id="themeSwitch">Cambiar tema</button></li>
 				</ul>
 			</nav>
-			<h1 class="title">Am I in Eisvana?</h1>
+			<h1 class="title">¿Estoy en la Royal Space Society?</h1>
 		</header>
 
 		<main>
 			<div>
-				<label class="label" for="portalglyphsInput">Portalglyphs / Galactic Coordinates / Region Name:</label>
+				<label class="label" for="portalglyphsInput">Glifos / Coordenadas Galácticas / Nombre de la Región:</label>
 				<input class="input" type="text" id="portalglyphsInput">
-				<button role="button" class="is-danger" id="delButton" type="button">&larr; Delete</button>
+				<button role="button" class="is-danger" id="delButton" type="button">&larr; Eliminar</button>
 				<div class="portal-buttons grid"></div>
 				<p>
 					<output class="glyphs" id="glyphDisplay"></output>
@@ -34,8 +34,8 @@
 			</div>
 
 			<div class="actions">
-				<input role="button" type="submit" value="Check" id="submitBtn">
-				<input role=" button" type="reset" value="Reset Input" id="resetBtn">
+				<input role="button" type="submit" value="Verificar" id="submitBtn">
+				<input role=" button" type="reset" value="Restablecer entrada" id="resetBtn">
 			</div>
 			<p class=" output">
 				<output id="output"></output>
